# mini-midi-player

./: .gitignore  CMakeLists.txt  README.md  app.icns  build.info
Resources/: Credits.rtf  Info.plist.in  MiniMidiPlayer.entitlements
_scripts/: ExportOptions-DeveloperID.plist  archive.sh  build.sh  extract_music_svgs.py  lib-update.sh  tighten_svgs.py
cmake/: embed_font.cmake  embed_svgs.cmake  libvorbis.cmake
src/: main.cpp
src/cli/: main.cpp
src/core/: MmpEngine.cpp  MmpEngine.h
src/midi/: SmfDump.cpp  SmfDump.h  SmfPlayer.cpp  SmfPlayer.h
src/sf2/: Sf2Dump.cpp  Sf2Dump.h  Sf3Codec.cpp  Sf3Codec.h
src/ui/: AnimationState.h  CustomBoxes.cpp  CustomBoxes.h  HistoryDialog.cpp  HistoryDialog.h  IconAudio.cpp  IconAudio.h  MacAbout.mm  MainWindow.cpp  MainWindow.h  MidiInspector.cpp  MidiInspector.h  SfInspector.cpp  SfInspector.h
src/ui/widgets/: AnimationChrome.cpp  AnimationChrome.h  MmpDigitalCounter.cpp  MmpDigitalCounter.h  MmpEllipsisLabel.cpp  MmpEllipsisLabel.h  MmpIconButton.cpp  MmpIconButton.h  MmpNoteGlyphs.cpp  MmpNoteGlyphs.h  MmpPianoKeyboard.cpp  MmpPianoKeyboard.h  MmpPianoRoll.cpp  MmpPianoRoll.h  MmpSpectrum.cpp  MmpSpectrum.h  MmpVuMeter.cpp  MmpVuMeter.h
